paged comments working now, fixes #12 word-wrap: break-word for all the content

--- a/html/wp-content/themes/kremalicious2/assets/css/app.css
+++ b/html/wp-content/themes/kremalicious2/assets/css/app.css
@@ -655,6 +655,8 @@ nav[role="navigation"] i {
 	background-size: 100% 10em;
 	
 	background-repeat: no-repeat;
+	
+	word-wrap: break-word;
 }
 
 
